--- a/about_me.css
+++ b/about_me.css
@@ -7,4 +7,6 @@
     background-image: url(./Media/body_skills.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
