--- a/contact_me.css
+++ b/contact_me.css
@@ -7,4 +7,8 @@
     background-image: url(./Media/contact_me.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
+
+/* thanks for watching */
